# RedesDeSensores

./: README.md
SerialRadioCommunication/: InfoMsg.java  Makefile  TestSerial.java  TestSerialAppC.nc  TestSerialC.nc  makeSlave.sh  run.sh
SerialRadioCommunication/Main/: Mote.java  TestSerial.java  run.sh
SerialRadioCommunication/Master/: TestSerial.h
SerialRadioCommunication/Slave/: .EsclavoApp.h.swp  EsclavoApp.h  EsclavoAppC.nc  EsclavoC.nc  Makefile
cmd_vel_publisher/: CMakeLists.txt  package.xml
cmd_vel_publisher/src/: cmd_vel_publisher_node.cpp  cmd_vel_publisher_node.cpp~
scripts/: script_exec_ros.sh  script_install_ros.sh  script_serial_to_topic.sh
serial_to_topic/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
serial_to_topic/gradle/wrapper/: gradle-wrapper.properties
serial_to_topic/temp_publisher/: build.gradle
serial_to_topic/temp_publisher/src/main/java/com/github/serial_to_topic/temp_publisher/: Listener.java  Talker.java
temperature_markers_publisher/: CMakeLists.txt  package.xml
temperature_markers_publisher/src/: temperature_markers_publisher.cpp  temperature_markers_publisher.cpp~  temperature_markers_publisher_modificado_manu.cpp
